feat: added logging messages and logic